--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</nav>
 
 			<!-- Audio-player -->
-			<audio id="musicPlayer" controls loop autoplay>
+			<audio id="musicPlayer" autoplay loadstart loop controls controlslist>
 				<source src="/assets/sound/backgroundMusic.mp3" type="audio/mp3" />
 			</audio>
 		</header>
