added link for social media_buttons

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
 					<li>
 						<ul id="social">
 							<li>
-								<a href="#some_url" target="_blank"><img src="/assets/ico/linkedin.svg" alt="%socialPages_image" /></a>
+								<a href="https://www.linkedin.com/in/dmitri-garabine-41284510b/" target="_blank"><img src="/assets/ico/linkedin.svg" alt="%socialPages_image" /></a>
 							</li>
 							<li>
-								<a href="#some_url" target="_blank"><img src="/assets/ico/github_.svg" alt="%socialPages_image" /></a>
+								<a href="https://github.com/xMurieLLx" target="_blank"><img src="/assets/ico/github_.svg" alt="%socialPages_image" /></a>
 							</li>
 							<li>
-								<a href="#some_url" target="_blank"><img src="/assets/ico/telegram.svg" alt="%socialPages_image" /></a>
+								<a href="https://t.me/xmuriellx" target="_blank"><img src="/assets/ico/telegram.svg" alt="%socialPages_image" /></a>
 							</li>
 							<li>
-								<a href="#some_url" target="_blank"><img src="/assets/ico/instagram.svg" alt="%socialPages_image" /></a>
+								<a href="https://www.instagram.com/xmuriellx" target="_blank"><img src="/assets/ico/instagram.svg" alt="%socialPages_image" /></a>
 							</li>
 							<li>
-								<a href="#some_url" target="_blank"><img src="/assets/ico/mail.svg" alt="%socialPages_image" /></a>
+								<a href="mailto: muriell.htc@gmail.com" target="_blank"><img src="/assets/ico/mail.svg" alt="%socialPages_image" /></a>
 							</li>
 						</ul>
 					</li>
@@ -59,48 +59,38 @@
 
 		<aside class="sidebarLeft">
 			<!-- left_sidebar -> hard&soft skills put here -->
-			<ul class="skill">
+			<ol class="skill">
 				<li>
-					<p></p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, exercitationem.
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, exercitationem.</p>
 				</li>
 				<li>
-					<p></p>
-					Facilis voluptatibus nihil nesciunt, repellendus dolorum consequuntur eius ad quidem.
+					<p>Facilis voluptatibus nihil nesciunt, repellendus dolorum consequuntur eius ad quidem.</p>
 				</li>
 				<li>
-					<p></p>
-					Perferendis eius corrupti asperiores recusandae quam, natus placeat saepe doloremque.
+					<p>Perferendis eius corrupti asperiores recusandae quam, natus placeat saepe doloremque.</p>
 				</li>
 				<li>
-					<p></p>
-					Repellendus accusantium quis vero reprehenderit eius voluptatibus culpa explicabo consectetur?
+					<p>Repellendus accusantium quis vero reprehenderit eius voluptatibus culpa explicabo consectetur?</p>
 				</li>
 				<li>
-					<p></p>
-					Sapiente corrupti voluptatum magni recusandae illum similique possimus officiis accusantium.
+					<p>Sapiente corrupti voluptatum magni recusandae illum similique possimus officiis accusantium.</p>
 				</li>
 				<li>
-					<p></p>
-					Quod perspiciatis ut velit nulla ad doloremque ipsa? Veritatis, omnis?
+					<p>Quod perspiciatis ut velit nulla ad doloremque ipsa? Veritatis, omnis?</p>
 				</li>
 				<li>
-					<p></p>
-					Laudantium ipsa deserunt suscipit? Nemo suscipit voluptatum ad sit? Neque.
+					<p>Laudantium ipsa deserunt suscipit? Nemo suscipit voluptatum ad sit? Neque.</p>
 				</li>
 				<li>
-					<p></p>
-					Consectetur beatae accusantium enim voluptas aspernatur. Facere labore tempora ipsam!
+					<p>Consectetur beatae accusantium enim voluptas aspernatur. Facere labore tempora ipsam!</p>
 				</li>
 				<li>
-					<p></p>
-					Aperiam debitis natus rem ut architecto ea magni odit mollitia.
+					<p>Aperiam debitis natus rem ut architecto ea magni odit mollitia.</p>
 				</li>
 				<li>
-					<p></p>
-					Voluptate exercitationem illo voluptas ut aut cupiditate nemo aliquam fugit.
+					<p>Voluptate exercitationem illo voluptas ut aut cupiditate nemo aliquam fugit.</p>
 				</li>
-			</ul>
+			</ol>
 		</aside>
 
 		<aside class="sidebarRight">
