--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 		<aside class="sidebarLeft">
 			<!-- left_sidebar -> hard&soft skills put here -->
-			<ol class="skill">
+			<ul class="skill">
 				<li>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, exercitationem.</p>
 				</li>
@@ -90,7 +90,7 @@
 				<li>
 					<p>Voluptate exercitationem illo voluptas ut aut cupiditate nemo aliquam fugit.</p>
 				</li>
-			</ol>
+			</ul>
 		</aside>
 
 		<aside class="sidebarRight">
@@ -102,10 +102,29 @@
 			<section>
 				<img class="avatarPhoto" src="/assets/img/photo1641737175.jpeg" alt="%avatar_image%" />
 				<section>
-					<article></article>
-					<article></article>
-					<article></article>
-					<article></article>
+					<article>
+						<h2><p>About me</p></h2>
+					</article>
+					<article>
+						<h2>
+							<p>Work experience</p>
+						</h2>
+					</article>
+					<article>
+						<h2>
+							<p>Learning</p>
+						</h2>
+					</article>
+					<article>
+						<h2>
+							<p>My projects</p>
+						</h2>
+					</article>
+					<article>
+						<h2>
+							<p>Some other info</p>
+						</h2>
+					</article>
 				</section>
 				<section></section>
 			</section>
