--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 						<h2><p>About me</p></h2>
 					</article>
 					<article>
+						//some text
 						<h2>
 							<p>Work experience</p>
 						</h2>
